--- a/S1_EDA.ipynb
+++ b/S1_EDA.ipynb
@@ -9,6 +9,19 @@
       },
       "outputs": [],
       "source": [
+        "# In this notebook we are performing EDA. \n",
+        "# Before running this notebook make sure you have the dataset extracted and is under the same parent folder. \n",
+        "# After running this notebook we are ablt to find the top 20 authors who have sent the most numbers of emails and for our project we are only \n",
+        "# foucsing on these 20 authors."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a199c5a0",
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "#importing libraries\n",
         "\n",
         "import os\n",
