--- a/S2_ExtractingData.ipynb
+++ b/S2_ExtractingData.ipynb
@@ -1,12 +1,19 @@
 {
   "cells": [
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "id": "5e3e750e",
+      "metadata": {},
+      "source": [
+        "In this noebook we are going to Pre-Process our text data. Our aim after running this note is to create a csv file which has the following attributes - AuthorName, Folder, File, Message ID, Processed_Text, Raw Text. As such we are removing any unwanted data from our raw_text data using Regular Expression. In the Processed_text we are only interested in the chat(text data) sent over email and are not concered with other other data like the Filename or forwareded by etc.  "
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 2,
-      "id": "423044e7",
-      "metadata": {
-        "id": "423044e7"
-      },
+      "execution_count": null,
+      "id": "e767f037",
+      "metadata": {},
       "outputs": [],
       "source": [
         "# importing libraries\n",
